--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -79,14 +79,21 @@ jobs:
           target: 'desktop'
           arch: 'win64_msvc2019_64'
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
-      - name: build on Linux / macOS
-        if: runner.os != 'Windows'
+      - name: build on Linux
+        if: runner.os == 'Linux'
+        run: |
+          meson --buildtype release $BUILD_PATH
+          cd $BUILD_PATH
+          meson configure -Ddefault_library=static -Drtaudio=enabled
+          meson compile
+      - name: build on macOS
+        if: runner.os == 'macOS'
         env:
           DEVELOPER_DIR: '/Applications/Xcode_11.7.app/Contents/Developer' # specify XCode version on macOS
         run: |
           meson --buildtype release $BUILD_PATH
           cd $BUILD_PATH
-          meson configure -Ddefault_library=static -Drtaudio=enabled
+          meson configure -Ddefault_library=static -Drtaudio=enabled -Dweakjack=true
           meson compile
       - name: build on Windows
         if: runner.os == 'Windows'
