--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -93,16 +93,16 @@ jobs:
         env:
           DEVELOPER_DIR: '/Applications/Xcode_11.7.app/Contents/Developer' # specify XCode version on macOS
         run: |
-          meson --buildtype release $BUILD_PATH
+          meson --buildtype release -Drtaudio=enabled $BUILD_PATH
           cd $BUILD_PATH
-          meson configure -Ddefault_library=static -Drtaudio=enabled -Dweakjack=true
+          meson configure -Ddefault_library=static -Drtaudio:jack=disabled -Dweakjack=true
           meson compile
       - name: build on Windows
         if: runner.os == 'Windows'
         run: |
           meson --buildtype release -Drtaudio=enabled builddir
           cd builddir
-          meson configure -Ddefault_library=both -Drtaudio:default_library=static -Drtaudio:wasapi=true -Dwingetopt:default_library=static -Dweakjack=true
+          meson configure -Ddefault_library=both -Drtaudio:default_library=static -Drtaudio:wasapi=true -Drtaudio:jack=disabled -Dwingetopt:default_library=static -Dweakjack=true
           meson compile
       - name: upload artifacts
         uses: actions/upload-artifact@v2
