--- a/linux/flatpak/org.jacktrip.JackTrip.yml
+++ b/linux/flatpak/org.jacktrip.JackTrip.yml
@@ -13,7 +13,6 @@ finish-args:
   - --share=network
   # Pipewire/Jack
   - --filesystem=xdg-run/pipewire-0
-  - --system-talk-name=org.freedesktop.RealtimeKit1
   - --device=all
 modules:
   - shared-modules/linux-audio/jack2.json
@@ -22,4 +21,4 @@ modules:
     sources:
       - type: git
         url: https://github.com/jacktrip/jacktrip.git
-        branch: dev
+        branch: main
