--- a/linux/flatpak/org.jacktrip.JackTrip.Devel.yml
+++ b/linux/flatpak/org.jacktrip.JackTrip.Devel.yml
@@ -18,7 +18,8 @@ modules:
   - shared-modules/linux-audio/jack2.json
   - name: jacktrip
     buildsystem: meson
-    config-opts: -Dprofile=development
+    config-opts:
+      - -Dprofile=development
     sources:
       - type: git
         url: https://github.com/jacktrip/jacktrip.git
