--- a/linux/flatpak/org.jacktrip.JackTrip.Devel.yml
+++ b/linux/flatpak/org.jacktrip.JackTrip.Devel.yml
@@ -7,12 +7,14 @@ finish-args:
   # X11 + XShm access
   - --share=ipc
   - --socket=fallback-x11
+  - --device=dri
   # Wayland access
   - --socket=wayland
   # Needs network access
   - --share=network
   # Pipewire/Jack
   - --filesystem=xdg-run/pipewire-0
+  - --system-talk-name=org.freedesktop.RealtimeKit1
   - --socket=system-bus
 modules:
   - shared-modules/linux-audio/jack2.json
