--- a/linux/flatpak/org.jacktrip.JackTrip.Devel.yml
+++ b/linux/flatpak/org.jacktrip.JackTrip.Devel.yml
@@ -6,6 +6,7 @@ command: jacktrip
 finish-args:
   # X11 + XShm access
   - --share=ipc
+  - --socket=x11
   - --socket=fallback-x11
   - --device=dri
   # Wayland access
