--- a/.github/workflows/flatpak-release.yml
+++ b/.github/workflows/flatpak-release.yml
@@ -6,6 +6,7 @@ jobs:
   flatpak:
     name: "Flatpak"
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/head/main')
     container:
       image: bilelmoussaoui/flatpak-github-actions:kde-5.15
       options: --privileged
