--- a/linux/flatpak/org.jacktrip.JackTrip.yml
+++ b/linux/flatpak/org.jacktrip.JackTrip.yml
@@ -24,4 +24,4 @@ modules:
     sources:
       - type: git
         url: https://github.com/jacktrip/jacktrip.git
-        branch: main
+        default-branch: main
