--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -251,7 +251,7 @@ jobs:
           ./assemble_app.sh $CONFIG
           if [[ -n ${{ matrix.bundle-path }} ]]; then
             mkdir -p $BUILD_PATH/${{ matrix.bundle-path }}
-            zip --symlinks -r $BUILD_PATH/${{ matrix.bundle-path }}/JackTrip-${{ steps.set-version.outputs.version }}-${{ matrix.name }}-application.zip *.app
+            zip --symlinks -r $BUILD_PATH/${{ matrix.bundle-path }}/JackTrip-${{ steps.set-version.outputs.version }}-${{ matrix.name }}-application.zip *.app $GITHUB_WORKSPACE/LICENSE.md $GITHUB_WORKSPACE/LICENSE_MIT $GITHUB_WORKSPACE/LICENSE_GPL $GITHUB_WORKSPACE/LICENSE_LGPL
           fi
           if [[ -n ${{ matrix.installer-path }} ]]; then
             mkdir -p $BUILD_PATH/${{ matrix.installer-path }}
