--- a/.github/workflows/flatpak-devel.yml
+++ b/.github/workflows/flatpak-devel.yml
@@ -14,6 +14,16 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Generate flatpak manifest
+      uses: cuchi/jinja2-action@v1.2.0
+      with:
+        template: linux/flatpak/org.jacktrip.JackTrip.Devel.yml.j2
+        output_file: linux/flatpak/org.jacktrip.JackTrip.Devel.yml
+        strict: true
+      env:
+        REPO: https://github.com/${{ github.repository }}
+        REF: ${{ github.ref }}
+        COMMIT: ${{ github.sha }}
     - uses: bilelmoussaoui/flatpak-github-actions/flatpak-builder@v3
       with:
         bundle: jacktrip-dev.flatpak
