[Metainfo] Fix summary

--- a/linux/org.jacktrip.JackTrip.metainfo.xml.in
+++ b/linux/org.jacktrip.JackTrip.metainfo.xml.in
@@ -5,8 +5,7 @@
   <metadata_license>MIT</metadata_license>
   <project_license>GPL-3.0+</project_license>
   <name>JackTrip</name>
-  <summary>Connect and Play with other Musicians</summary>
-  <summary lang="de_DE">Verbinde dich und spiele mit anderen Musikern</summary>
+  <summary>Connect and play with other musicians</summary>
 
   <description>
     <p>
